[project]
name = "populate_voyage"
version = "0.1.0"
description = "Excel-driven Supabase → PySpark pipeline with Jupyter"
readme = "README.md"
requires-python = ">=3.12,<3.14"

# Core + your earlier requirements.txt + Jupyter + dotenv
dependencies = [
  "ipykernel",
  "jupyter", # or "notebook" / "jupyterlab" if you prefer
  "numpy",
  "pandas>=2.1.0",
  "matplotlib",
  # From our pipeline
  "pyspark>=3.5.0",
  "psycopg[binary]>=3.1.18",
  "openpyxl>=3.1.2",
  "xlwings>=0.30.16",
  # .env support
  "python-dotenv>=1.0.0",
  "supabase>=2.4.0",
  "azure-identity>=1.25.1",
  "azure-keyvault-secrets>=4.10.0",
  "nbconvert>=7.16.6",
  "jupyter-core>=5.9.1",
  "jupyter-client>=8.6.3",
  "traitlets>=5.14.3",
  "msal>=1.34.0",
  "msal-extensions>=1.3.1",
]

[tool.uv]
# Keep a local, managed venv (recommended)
managed = true

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "pyinstaller-hooks-contrib>=2025.9",
]
